--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,17 @@
 [project]
 name = "bili-autolottery"
 version = "0.1.0"
-description = "b站全自动抽奖工具"
+description = "bilibili全自动抽奖工具"
 authors = [
     {name = "xcenweb"}
 ]
 license = {text = "MIT"}
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.11"
 dependencies = [
+    "sqlacodegen (>=3.0.0,<4.0.0)",
+    "sqlalchemy (>=2.0.40,<3.0.0)",
     "toml (>=0.10.2,<0.11.0)",
-    "argparse (>=1.4.0,<2.0.0)",
-    "transformers (>=4.48.0,<5.0.0)"
 ]
 
 
