--- a/data/setting.example.toml
+++ b/data/setting.example.toml
@@ -10,7 +10,7 @@ type = "qrcode" # 登录b站方式
 cache = "./data/credential.json" # 登录凭证缓存文件
 
 [db] # 数据库配置,支持sqlite、mysql
-# url = "sqlite:///./data/bili_lottery.db" # 数据库地址
+# url = "sqlite+aiosqlite:///./data/bili_lottery.db" # 数据库地址
 url = "mysql+aiomysql://root:root@localhost:3306/bili_lottery" # 数据库地址
 
 [zhipuai]
