--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "bilibili-api-dev (>=16.2.0b1,<17.0.0)",
     "aiosqlite (>=0.21.0,<0.22.0)",
     "aiomysql (>=0.2.0,<0.3.0)",
-    "toml (>=0.10.2,<0.11.0)"
+    "toml (>=0.10.2,<0.11.0)",
+    "sqlalchemy (>=2.0.40,<3.0.0)",
+    "zhipuai (>=2.1.5.20250421,<3.0.0.0)"
 ]
 
 
